packages/integration/__tests__/__snapshots__/crafty-preset-babel-webpack.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiles Generators 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/compiles-generators/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name     module                                              status
  1 kB  79       (node_modules)/regenerator-runtime/runtime.js       built
  1 kB  417      ./js/script.js                                      built
  1 kB  911      (node_modules)/@babel/runtime/regenerator/index.js  built

  size  name     asset                                               status
  1 kB  default  myBundle.min.js                                     emitted
  1 kB  map      myBundle.min.js.map                                 emitted

  (4 modules hidden)

  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles Generators 2`] = `
"(function(t,r){if(\\"object\\"===typeof exports&&\\"object\\"===typeof module)module.exports=r();else if(\\"function\\"===typeof define&&define.amd)define([],r);else{var e=r();for(var n in e)(\\"object\\"===typeof exports?exports:t)[n]=e[n]}})(window,(function(){return function(t){var r={};function e(n){if(r[n])return r[n].exports;var o=r[n]={i:n,l:false,exports:{}};return t[n].call(o.exports,o,o.exports,e),o.l=true,o.exports}return e.m=t,e.c=r,e.d=function(t,r,n){e.o(t,r)||Object.defineProperty(t,r,{enumerable:true,get:n})},e.r=function(t){\\"undefined\\"!==typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(t,Symbol.toStringTag,{value:\\"Module\\"}),Object.defineProperty(t,\\"__esModule\\",{value:true})},e.t=function(t,r){if(1&r&&(t=e(t)),8&r)return t;if(4&r&&\\"object\\"===typeof t&&t&&t.__esModule)return t;var n=Object.create(null);if(e.r(n),Object.defineProperty(n,\\"default\\",{enumerable:true,value:t}),2&r&&\\"string\\"!=typeof t)for(var o in t)e.d(n,o,function(r){return t[r]}.bind(null,o));return n},e.n=function(t){var r=t&&t.__esModule?function(){return t.default}:function(){return t};return e.d(r,\\"a\\",r),r},e.o=function(t,r){return Object.prototype.hasOwnProperty.call(t,r)},e.p=\\"\\",e(e.s=1)}([function(t,r,e){t.exports=e(3)},function(t,r,e){t.exports=e(2)},function(t,r,e){\\"use strict\\";e.r(r),e.d(r,\\"default\\",(function(){return a}));var n=e(0);var o=e.n(n);var i=o.a.mark(a);function a(){return o.a.wrap((function(t){while(1)switch(t.prev=t.next){case 0:return t.next=2,1;case 2:case\\"end\\":return t.stop()}}),i)}},function(t,r,e){var n=function(t){\\"use strict\\";var r=Object.prototype;var e=r.hasOwnProperty;var n;var o=\\"function\\"===typeof Symbol?Symbol:{};var i=o.iterator||\\"@@iterator\\";var a=o.asyncIterator||\\"@@asyncIterator\\";var u=o.toStringTag||\\"@@toStringTag\\";function c(t,r,e,n){var o=r&&r.prototype instanceof y?r:y;var i=Object.create(o.prototype);var a=new P(n||[]);return i._invoke=_(t,e,a),i}function f(t,r,e){try{return{type:\\"normal\\",arg:t.call(r,e)}}catch(t){return{type:\\"throw\\",arg:t}}}t.wrap=c;var l=\\"suspendedStart\\";var s=\\"suspendedYield\\";var h=\\"executing\\";var p=\\"completed\\";var v={};function y(){}function d(){}function g(){}var m={};m[i]=function(){return this};var w=Object.getPrototypeOf;var x=w&&w(w(k([])));x&&x!==r&&e.call(x,i)&&(m=x);var b=g.prototype=y.prototype=Object.create(m);function L(t){[\\"next\\",\\"throw\\",\\"return\\"].forEach((function(r){t[r]=function(t){return this._invoke(r,t)}}))}function E(t,r){function n(o,i,a,u){var c=f(t[o],t,i);if(\\"throw\\"!==c.type){var l=c.arg;var s=l.value;if(s&&\\"object\\"===typeof s&&e.call(s,\\"__await\\"))return r.resolve(s.__await).then((function(t){n(\\"next\\",t,a,u)}),(function(t){n(\\"throw\\",t,a,u)}));return r.resolve(s).then((function(t){l.value=t,a(l)}),(function(t){return n(\\"throw\\",t,a,u)}))}u(c.arg)}var o;function i(t,e){function i(){return new r((function(r,o){n(t,e,r,o)}))}return o=o?o.then(i,i):i()}this._invoke=i}function _(t,r,e){var n=l;return function(o,i){if(n===h)throw new Error(\\"Generator is already running\\");if(n===p){if(\\"throw\\"===o)throw i;return G()}e.method=o,e.arg=i;while(true){var a=e.delegate;if(a){var u=j(a,e);if(u){if(u===v)continue;return u}}if(\\"next\\"===e.method)e.sent=e._sent=e.arg;else if(\\"throw\\"===e.method){if(n===l)throw n=p,e.arg;e.dispatchException(e.arg)}else\\"return\\"===e.method&&e.abrupt(\\"return\\",e.arg);n=h;var c=f(t,r,e);if(\\"normal\\"===c.type){if(n=e.done?p:s,c.arg===v)continue;return{value:c.arg,done:e.done}}\\"throw\\"===c.type&&(n=p,e.method=\\"throw\\",e.arg=c.arg)}}}function j(t,r){var e=t.iterator[r.method];if(e===n){if(r.delegate=null,\\"throw\\"===r.method){if(t.iterator.return&&(r.method=\\"return\\",r.arg=n,j(t,r),\\"throw\\"===r.method))return v;r.method=\\"throw\\",r.arg=new TypeError(\\"The iterator does not provide a 'throw' method\\")}return v}var o=f(e,t.iterator,r.arg);if(\\"throw\\"===o.type)return r.method=\\"throw\\",r.arg=o.arg,r.delegate=null,v;var i=o.arg;if(!i)return r.method=\\"throw\\",r.arg=new TypeError(\\"iterator result is not an object\\"),r.delegate=null,v;if(!i.done)return i;return r[t.resultName]=i.value,r.next=t.nextLoc,\\"return\\"!==r.method&&(r.method=\\"next\\",r.arg=n),r.delegate=null,v}function O(t){var r={tryLoc:t[0]};1 in t&&(r.catchLoc=t[1]),2 in t&&(r.finallyLoc=t[2],r.afterLoc=t[3]),this.tryEntries.push(r)}function S(t){var r=t.completion||{};r.type=\\"normal\\",delete r.arg,t.completion=r}function P(t){this.tryEntries=[{tryLoc:\\"root\\"}],t.forEach(O,this),this.reset(true)}function k(t){if(t){var r=t[i];if(r)return r.call(t);if(\\"function\\"===typeof t.next)return t;if(!isNaN(t.length)){var o=-1,a=function r(){while(++o<t.length)if(e.call(t,o))return r.value=t[o],r.done=false,r;return r.value=n,r.done=true,r};return a.next=a}}return{next:G}}function G(){return{value:n,done:true}}return d.prototype=b.constructor=g,g.constructor=d,g[u]=d.displayName=\\"GeneratorFunction\\",t.isGeneratorFunction=function(t){var r=\\"function\\"===typeof t&&t.constructor;return!!r&&(r===d||\\"GeneratorFunction\\"===(r.displayName||r.name))},t.mark=function(t){return Object.setPrototypeOf?Object.setPrototypeOf(t,g):(t.__proto__=g,u in t||(t[u]=\\"GeneratorFunction\\")),t.prototype=Object.create(b),t},t.awrap=function(t){return{__await:t}},L(E.prototype),E.prototype[a]=function(){return this},t.AsyncIterator=E,t.async=function(r,e,n,o,i){void 0===i&&(i=Promise);var a=new E(c(r,e,n,o),i);return t.isGeneratorFunction(e)?a:a.next().then((function(t){return t.done?t.value:a.next()}))},L(b),b[u]=\\"Generator\\",b[i]=function(){return this},b.toString=function(){return\\"[object Generator]\\"},t.keys=function(t){var r=[];for(var e in t)r.push(e);return r.reverse(),function e(){while(r.length){var n=r.pop();if(n in t)return e.value=n,e.done=false,e}return e.done=true,e}},t.values=k,P.prototype={constructor:P,reset:function(t){if(this.prev=0,this.next=0,this.sent=this._sent=n,this.done=false,this.delegate=null,this.method=\\"next\\",this.arg=n,this.tryEntries.forEach(S),!t)for(var r in this)\\"t\\"===r.charAt(0)&&e.call(this,r)&&!isNaN(+r.slice(1))&&(this[r]=n)},stop:function(){this.done=true;var t=this.tryEntries[0];var r=t.completion;if(\\"throw\\"===r.type)throw r.arg;return this.rval},dispatchException:function(t){if(this.done)throw t;var r=this;function o(e,o){return u.type=\\"throw\\",u.arg=t,r.next=e,o&&(r.method=\\"next\\",r.arg=n),!!o}for(var i=this.tryEntries.length-1;i>=0;--i){var a=this.tryEntries[i];var u=a.completion;if(\\"root\\"===a.tryLoc)return o(\\"end\\");if(a.tryLoc<=this.prev){var c=e.call(a,\\"catchLoc\\");var f=e.call(a,\\"finallyLoc\\");if(c&&f){if(this.prev<a.catchLoc)return o(a.catchLoc,true);if(this.prev<a.finallyLoc)return o(a.finallyLoc)}else if(c){if(this.prev<a.catchLoc)return o(a.catchLoc,true)}else{if(!f)throw new Error(\\"try statement without catch or finally\\");if(this.prev<a.finallyLoc)return o(a.finallyLoc)}}}},abrupt:function(t,r){for(var n=this.tryEntries.length-1;n>=0;--n){var o=this.tryEntries[n];if(o.tryLoc<=this.prev&&e.call(o,\\"finallyLoc\\")&&this.prev<o.finallyLoc){var i=o;break}}i&&(\\"break\\"===t||\\"continue\\"===t)&&i.tryLoc<=r&&r<=i.finallyLoc&&(i=null);var a=i?i.completion:{};if(a.type=t,a.arg=r,i)return this.method=\\"next\\",this.next=i.finallyLoc,v;return this.complete(a)},complete:function(t,r){if(\\"throw\\"===t.type)throw t.arg;return\\"break\\"===t.type||\\"continue\\"===t.type?this.next=t.arg:\\"return\\"===t.type?(this.rval=this.arg=t.arg,this.method=\\"return\\",this.next=\\"end\\"):\\"normal\\"===t.type&&r&&(this.next=r),v},finish:function(t){for(var r=this.tryEntries.length-1;r>=0;--r){var e=this.tryEntries[r];if(e.finallyLoc===t)return this.complete(e.completion,e.afterLoc),S(e),v}},catch:function(t){for(var r=this.tryEntries.length-1;r>=0;--r){var e=this.tryEntries[r];if(e.tryLoc===t){var n=e.completion;if(\\"throw\\"===n.type){var o=n.arg;S(e)}return o}}throw new Error(\\"illegal catch attempt\\")},delegateYield:function(t,r,e){return this.delegate={iterator:k(t),resultName:r,nextLoc:e},\\"next\\"===this.method&&(this.arg=n),v}},t}(t.exports);try{regeneratorRuntime=n}catch(t){Function(\\"r\\",\\"regeneratorRuntime = r\\")(n)}}])}));
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Compiles JavaScript 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/compiles/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name     module                       status
  1 kB  0        multi ./js/script.js         built
  1 kB  1        ./js/script.js + 11 modules  built

  size  name     asset                        status
  1 kB  default  myBundle.min.js              emitted
  1 kB  default  myBundle.min.js.map          emitted

  (3 modules hidden)

  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles JavaScript 2`] = `
"(function(t,e){if(\\"object\\"===typeof exports&&\\"object\\"===typeof module)module.exports=e();else if(\\"function\\"===typeof define&&define.amd)define([],e);else{var n=e();for(var r in n)(\\"object\\"===typeof exports?exports:t)[r]=n[r]}})(window,(function(){return function(t){var e={};function n(r){if(e[r])return e[r].exports;var o=e[r]={i:r,l:false,exports:{}};return t[r].call(o.exports,o,o.exports,n),o.l=true,o.exports}return n.m=t,n.c=e,n.d=function(t,e,r){n.o(t,e)||Object.defineProperty(t,e,{enumerable:true,get:r})},n.r=function(t){\\"undefined\\"!==typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(t,Symbol.toStringTag,{value:\\"Module\\"}),Object.defineProperty(t,\\"__esModule\\",{value:true})},n.t=function(t,e){if(1&e&&(t=n(t)),8&e)return t;if(4&e&&\\"object\\"===typeof t&&t&&t.__esModule)return t;var r=Object.create(null);if(n.r(r),Object.defineProperty(r,\\"default\\",{enumerable:true,value:t}),2&e&&\\"string\\"!=typeof t)for(var o in t)n.d(r,o,function(e){return t[e]}.bind(null,o));return r},n.n=function(t){var e=t&&t.__esModule?function(){return t.default}:function(){return t};return n.d(e,\\"a\\",e),e},n.o=function(t,e){return Object.prototype.hasOwnProperty.call(t,e)},n.p=\\"\\",n(n.s=0)}([function(t,e,n){t.exports=n(1)},function(t,e,n){\\"use strict\\";function r(t,e){if(!(t instanceof e))throw new TypeError(\\"Cannot call a class as a function\\")}function o(t,e){for(var n=0;n<e.length;n++){var r=e[n];r.enumerable=r.enumerable||false,r.configurable=true,\\"value\\"in r&&(r.writable=true),Object.defineProperty(t,r.key,r)}}function u(t,e,n){return e&&o(t.prototype,e),n&&o(t,n),t}function f(t,e){return f=Object.setPrototypeOf||function(t,e){return t.__proto__=e,t},f(t,e)}function c(t,e){if(\\"function\\"!==typeof e&&null!==e)throw new TypeError(\\"Super expression must either be null or a function\\");t.prototype=Object.create(e&&e.prototype,{constructor:{value:t,writable:true,configurable:true}}),e&&f(t,e)}function i(t){return i=Object.setPrototypeOf?Object.getPrototypeOf:function(t){return t.__proto__||Object.getPrototypeOf(t)},i(t)}function l(){if(\\"undefined\\"===typeof Reflect||!Reflect.construct)return false;if(Reflect.construct.sham)return false;if(\\"function\\"===typeof Proxy)return true;try{return Date.prototype.toString.call(Reflect.construct(Date,[],(function(){}))),true}catch(t){return false}}function a(t){return a=\\"function\\"===typeof Symbol&&\\"symbol\\"===typeof Symbol.iterator?function(t){return typeof t}:function(t){return t&&\\"function\\"===typeof Symbol&&t.constructor===Symbol&&t!==Symbol.prototype?\\"symbol\\":typeof t},a(t)}function s(t){if(void 0===t)throw new ReferenceError(\\"this hasn't been initialised - super() hasn't been called\\");return t}function p(t,e){if(e&&(\\"object\\"===a(e)||\\"function\\"===typeof e))return e;return s(t)}function y(t){var e=l();return function(){var n,r=i(t);if(e){var o=i(this).constructor;n=Reflect.construct(r,arguments,o)}else n=r.apply(this,arguments);return p(this,n)}}n.r(e),n.d(e,\\"default\\",(function(){return d}));var b=function(t){c(n,t);var e=y(n);function n(){var t;r(this,n);for(var o=arguments.length,u=new Array(o),f=0;f<o;f++)u[f]=arguments[f];return t=e.call.apply(e,[this].concat(u)),t.handleClick=function(){t.setState({hey:true})},t}return u(n,[{key:\\"render\\",value:function(){return React.createElement(\\"div\\",{onClick:this.handleClick},\\"Hey \\",this.state.hey)}}]),n}(React.Component);var d=function(){function t(){r(this,t),console.log(\\"init class\\")}return u(t,[{key:\\"method\\",value:function(){console.log(b)}}]),t}()}])}));
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Compiles JavaScript with externals 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/externals/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name     module                              status
  1 kB  0        external \\"somelibrary/thing/stuff\\"  built
  1 kB  1        multi ./js/script.js                built
  1 kB  2        ./js/script.js + 11 modules         built

  size  name     asset                               status
  1 kB  default  myBundle.min.js                     emitted
  1 kB  map      myBundle.min.js.map                 emitted

  (4 modules hidden)

  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles JavaScript with externals 2`] = `
"(function(t,e){if(\\"object\\"===typeof exports&&\\"object\\"===typeof module)module.exports=e(require(\\"somelibrary/thing/stuff\\"));else if(\\"function\\"===typeof define&&define.amd)define([\\"somelibrary/thing/stuff\\"],e);else{var r=\\"object\\"===typeof exports?e(require(\\"somelibrary/thing/stuff\\")):e(t[\\"somelibrary/thing/stuff\\"]);for(var n in r)(\\"object\\"===typeof exports?exports:t)[n]=r[n]}})(window,(function(t){return function(t){var e={};function r(n){if(e[n])return e[n].exports;var o=e[n]={i:n,l:false,exports:{}};return t[n].call(o.exports,o,o.exports,r),o.l=true,o.exports}return r.m=t,r.c=e,r.d=function(t,e,n){r.o(t,e)||Object.defineProperty(t,e,{enumerable:true,get:n})},r.r=function(t){\\"undefined\\"!==typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(t,Symbol.toStringTag,{value:\\"Module\\"}),Object.defineProperty(t,\\"__esModule\\",{value:true})},r.t=function(t,e){if(1&e&&(t=r(t)),8&e)return t;if(4&e&&\\"object\\"===typeof t&&t&&t.__esModule)return t;var n=Object.create(null);if(r.r(n),Object.defineProperty(n,\\"default\\",{enumerable:true,value:t}),2&e&&\\"string\\"!=typeof t)for(var o in t)r.d(n,o,function(e){return t[e]}.bind(null,o));return n},r.n=function(t){var e=t&&t.__esModule?function(){return t.default}:function(){return t};return r.d(e,\\"a\\",e),e},r.o=function(t,e){return Object.prototype.hasOwnProperty.call(t,e)},r.p=\\"\\",r(r.s=1)}([function(e,r){e.exports=t},function(t,e,r){t.exports=r(2)},function(t,e,r){\\"use strict\\";function n(t,e){if(!(t instanceof e))throw new TypeError(\\"Cannot call a class as a function\\")}function o(t,e){for(var r=0;r<e.length;r++){var n=e[r];n.enumerable=n.enumerable||false,n.configurable=true,\\"value\\"in n&&(n.writable=true),Object.defineProperty(t,n.key,n)}}function u(t,e,r){return e&&o(t.prototype,e),r&&o(t,r),t}r.r(e),r.d(e,\\"default\\",(function(){return v}));var f=r(0);var i=r.n(f);function c(t,e){return c=Object.setPrototypeOf||function(t,e){return t.__proto__=e,t},c(t,e)}function l(t,e){if(\\"function\\"!==typeof e&&null!==e)throw new TypeError(\\"Super expression must either be null or a function\\");t.prototype=Object.create(e&&e.prototype,{constructor:{value:t,writable:true,configurable:true}}),e&&c(t,e)}function a(t){return a=Object.setPrototypeOf?Object.getPrototypeOf:function(t){return t.__proto__||Object.getPrototypeOf(t)},a(t)}function s(){if(\\"undefined\\"===typeof Reflect||!Reflect.construct)return false;if(Reflect.construct.sham)return false;if(\\"function\\"===typeof Proxy)return true;try{return Date.prototype.toString.call(Reflect.construct(Date,[],(function(){}))),true}catch(t){return false}}function p(t){return p=\\"function\\"===typeof Symbol&&\\"symbol\\"===typeof Symbol.iterator?function(t){return typeof t}:function(t){return t&&\\"function\\"===typeof Symbol&&t.constructor===Symbol&&t!==Symbol.prototype?\\"symbol\\":typeof t},p(t)}function y(t){if(void 0===t)throw new ReferenceError(\\"this hasn't been initialised - super() hasn't been called\\");return t}function b(t,e){if(e&&(\\"object\\"===p(e)||\\"function\\"===typeof e))return e;return y(t)}function d(t){var e=s();return function(){var r,n=a(t);if(e){var o=a(this).constructor;r=Reflect.construct(n,arguments,o)}else r=n.apply(this,arguments);return b(this,r)}}var h=function(t){l(r,t);var e=d(r);function r(){var t;n(this,r);for(var o=arguments.length,u=new Array(o),f=0;f<o;f++)u[f]=arguments[f];return t=e.call.apply(e,[this].concat(u)),t.handleClick=function(){t.setState({hey:true})},t}return u(r,[{key:\\"render\\",value:function(){return React.createElement(\\"div\\",{onClick:this.handleClick},\\"Hey \\",this.state.hey)}}]),r}(React.Component);var v=function(){function t(){n(this,t),console.log(\\"init class\\")}return u(t,[{key:\\"method\\",value:function(){console.log(h,i.a)}}]),t}()}])}));
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Creates profiles 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/profiles/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...

Duplicate Sources / Packages - No duplicates found. 🚀

Webpack Bundle Analyzer saved report to __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/profiles/dist/js/myBundle_report.html
Webpack Bundle Analyzer saved stats file to __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/profiles/dist/js/myBundle_stats.json
  size  name     module                       status
  1 kB  0        multi ./js/script.js         built
  1 kB  1        ./js/script.js + 11 modules  built

  size  name     asset                        status
  1 kB  default  myBundle.min.js              emitted
  1 kB  default  myBundle.min.js.map          emitted

  (3 modules hidden)

  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Creates profiles 2`] = `
"(function(t,e){if(\\"object\\"===typeof exports&&\\"object\\"===typeof module)module.exports=e();else if(\\"function\\"===typeof define&&define.amd)define([],e);else{var n=e();for(var r in n)(\\"object\\"===typeof exports?exports:t)[r]=n[r]}})(window,(function(){return function(t){var e={};function n(r){if(e[r])return e[r].exports;var o=e[r]={i:r,l:false,exports:{}};return t[r].call(o.exports,o,o.exports,n),o.l=true,o.exports}return n.m=t,n.c=e,n.d=function(t,e,r){n.o(t,e)||Object.defineProperty(t,e,{enumerable:true,get:r})},n.r=function(t){\\"undefined\\"!==typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(t,Symbol.toStringTag,{value:\\"Module\\"}),Object.defineProperty(t,\\"__esModule\\",{value:true})},n.t=function(t,e){if(1&e&&(t=n(t)),8&e)return t;if(4&e&&\\"object\\"===typeof t&&t&&t.__esModule)return t;var r=Object.create(null);if(n.r(r),Object.defineProperty(r,\\"default\\",{enumerable:true,value:t}),2&e&&\\"string\\"!=typeof t)for(var o in t)n.d(r,o,function(e){return t[e]}.bind(null,o));return r},n.n=function(t){var e=t&&t.__esModule?function(){return t.default}:function(){return t};return n.d(e,\\"a\\",e),e},n.o=function(t,e){return Object.prototype.hasOwnProperty.call(t,e)},n.p=\\"\\",n(n.s=0)}([function(t,e,n){t.exports=n(1)},function(t,e,n){\\"use strict\\";function r(t,e){if(!(t instanceof e))throw new TypeError(\\"Cannot call a class as a function\\")}function o(t,e){for(var n=0;n<e.length;n++){var r=e[n];r.enumerable=r.enumerable||false,r.configurable=true,\\"value\\"in r&&(r.writable=true),Object.defineProperty(t,r.key,r)}}function u(t,e,n){return e&&o(t.prototype,e),n&&o(t,n),t}function f(t,e){return f=Object.setPrototypeOf||function(t,e){return t.__proto__=e,t},f(t,e)}function c(t,e){if(\\"function\\"!==typeof e&&null!==e)throw new TypeError(\\"Super expression must either be null or a function\\");t.prototype=Object.create(e&&e.prototype,{constructor:{value:t,writable:true,configurable:true}}),e&&f(t,e)}function i(t){return i=Object.setPrototypeOf?Object.getPrototypeOf:function(t){return t.__proto__||Object.getPrototypeOf(t)},i(t)}function l(){if(\\"undefined\\"===typeof Reflect||!Reflect.construct)return false;if(Reflect.construct.sham)return false;if(\\"function\\"===typeof Proxy)return true;try{return Date.prototype.toString.call(Reflect.construct(Date,[],(function(){}))),true}catch(t){return false}}function a(t){return a=\\"function\\"===typeof Symbol&&\\"symbol\\"===typeof Symbol.iterator?function(t){return typeof t}:function(t){return t&&\\"function\\"===typeof Symbol&&t.constructor===Symbol&&t!==Symbol.prototype?\\"symbol\\":typeof t},a(t)}function s(t){if(void 0===t)throw new ReferenceError(\\"this hasn't been initialised - super() hasn't been called\\");return t}function p(t,e){if(e&&(\\"object\\"===a(e)||\\"function\\"===typeof e))return e;return s(t)}function y(t){var e=l();return function(){var n,r=i(t);if(e){var o=i(this).constructor;n=Reflect.construct(r,arguments,o)}else n=r.apply(this,arguments);return p(this,n)}}n.r(e),n.d(e,\\"default\\",(function(){return d}));var b=function(t){c(n,t);var e=y(n);function n(){var t;r(this,n);for(var o=arguments.length,u=new Array(o),f=0;f<o;f++)u[f]=arguments[f];return t=e.call.apply(e,[this].concat(u)),t.handleClick=function(){t.setState({hey:true})},t}return u(n,[{key:\\"render\\",value:function(){return React.createElement(\\"div\\",{onClick:this.handleClick},\\"Hey \\",this.state.hey)}}]),n}(React.Component);var d=function(){function t(){r(this,t),console.log(\\"init class\\")}return u(t,[{key:\\"method\\",value:function(){console.log(b)}}]),t}()}])}));
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Deduplicates helpers 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/compiles-deduplicates/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name     module                       status
  1 kB  0        multi ./js/script.js         built
  1 kB  1        ./js/script.js + 12 modules  built

  size  name     asset                        status
  1 kB  default  myBundle.min.js              emitted
  1 kB  map      myBundle.min.js.map          emitted

  (3 modules hidden)

  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Deduplicates helpers 2`] = `
"(function(t,e){if(\\"object\\"===typeof exports&&\\"object\\"===typeof module)module.exports=e();else if(\\"function\\"===typeof define&&define.amd)define([],e);else{var n=e();for(var r in n)(\\"object\\"===typeof exports?exports:t)[r]=n[r]}})(window,(function(){return function(t){var e={};function n(r){if(e[r])return e[r].exports;var o=e[r]={i:r,l:false,exports:{}};return t[r].call(o.exports,o,o.exports,n),o.l=true,o.exports}return n.m=t,n.c=e,n.d=function(t,e,r){n.o(t,e)||Object.defineProperty(t,e,{enumerable:true,get:r})},n.r=function(t){\\"undefined\\"!==typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(t,Symbol.toStringTag,{value:\\"Module\\"}),Object.defineProperty(t,\\"__esModule\\",{value:true})},n.t=function(t,e){if(1&e&&(t=n(t)),8&e)return t;if(4&e&&\\"object\\"===typeof t&&t&&t.__esModule)return t;var r=Object.create(null);if(n.r(r),Object.defineProperty(r,\\"default\\",{enumerable:true,value:t}),2&e&&\\"string\\"!=typeof t)for(var o in t)n.d(r,o,function(e){return t[e]}.bind(null,o));return r},n.n=function(t){var e=t&&t.__esModule?function(){return t.default}:function(){return t};return n.d(e,\\"a\\",e),e},n.o=function(t,e){return Object.prototype.hasOwnProperty.call(t,e)},n.p=\\"\\",n(n.s=0)}([function(t,e,n){t.exports=n(1)},function(t,e,n){\\"use strict\\";function r(t,e){if(!(t instanceof e))throw new TypeError(\\"Cannot call a class as a function\\")}function o(t,e){for(var n=0;n<e.length;n++){var r=e[n];r.enumerable=r.enumerable||false,r.configurable=true,\\"value\\"in r&&(r.writable=true),Object.defineProperty(t,r.key,r)}}function u(t,e,n){return e&&o(t.prototype,e),n&&o(t,n),t}function c(t,e){return c=Object.setPrototypeOf||function(t,e){return t.__proto__=e,t},c(t,e)}function i(t,e){if(\\"function\\"!==typeof e&&null!==e)throw new TypeError(\\"Super expression must either be null or a function\\");t.prototype=Object.create(e&&e.prototype,{constructor:{value:t,writable:true,configurable:true}}),e&&c(t,e)}function f(t){return f=Object.setPrototypeOf?Object.getPrototypeOf:function(t){return t.__proto__||Object.getPrototypeOf(t)},f(t)}function l(){if(\\"undefined\\"===typeof Reflect||!Reflect.construct)return false;if(Reflect.construct.sham)return false;if(\\"function\\"===typeof Proxy)return true;try{return Date.prototype.toString.call(Reflect.construct(Date,[],(function(){}))),true}catch(t){return false}}function a(t){return a=\\"function\\"===typeof Symbol&&\\"symbol\\"===typeof Symbol.iterator?function(t){return typeof t}:function(t){return t&&\\"function\\"===typeof Symbol&&t.constructor===Symbol&&t!==Symbol.prototype?\\"symbol\\":typeof t},a(t)}function s(t){if(void 0===t)throw new ReferenceError(\\"this hasn't been initialised - super() hasn't been called\\");return t}function p(t,e){if(e&&(\\"object\\"===a(e)||\\"function\\"===typeof e))return e;return s(t)}function y(t){var e=l();return function(){var n,r=f(t);if(e){var o=f(this).constructor;n=Reflect.construct(r,arguments,o)}else n=r.apply(this,arguments);return p(this,n)}}n.r(e),n.d(e,\\"default\\",(function(){return h}));var d=function(t){i(n,t);var e=y(n);function n(){var t;r(this,n);for(var o=arguments.length,u=new Array(o),c=0;c<o;c++)u[c]=arguments[c];return t=e.call.apply(e,[this].concat(u)),t.handleClick=function(){t.setState({hey:true})},t}return u(n,[{key:\\"render\\",value:function(){return React.createElement(\\"div\\",{onClick:this.handleClick},\\"Hey \\",this.state.hey)}}]),n}(React.Component);var b=function(t){i(n,t);var e=y(n);function n(){var t;r(this,n);for(var o=arguments.length,u=new Array(o),c=0;c<o;c++)u[c]=arguments[c];return t=e.call.apply(e,[this].concat(u)),t.handleClick=function(){t.setState({hey:true})},t}return u(n,[{key:\\"render\\",value:function(){return React.createElement(\\"div\\",{onClick:this.handleClick},\\"Hey \\",this.state.hey)}}]),n}(React.Component);var h=function(){function t(){r(this,t),console.log(\\"init class\\")}return u(t,[{key:\\"method\\",value:function(){console.log(d,b)}}]),t}()}])}));
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Does not transpile on modern browsers 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/no-old-browser/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name     module                      status
  1 kB  826      ./js/script.js + 1 modules  built

  size  name     asset                       status
  1 kB  default  myBundle.min.js             emitted
  1 kB  map      myBundle.min.js.map         emitted

  (3 modules hidden)

  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Does not transpile on modern browsers 2`] = `
"(function(e,t){if(\\"object\\"===typeof exports&&\\"object\\"===typeof module)module.exports=t();else if(\\"function\\"===typeof define&&define.amd)define([],t);else{var n=t();for(var r in n)(\\"object\\"===typeof exports?exports:e)[r]=n[r]}})(window,(function(){return function(e){var t={};function n(r){if(t[r])return t[r].exports;var o=t[r]={i:r,l:false,exports:{}};return e[r].call(o.exports,o,o.exports,n),o.l=true,o.exports}return n.m=e,n.c=t,n.d=function(e,t,r){n.o(e,t)||Object.defineProperty(e,t,{enumerable:true,get:r})},n.r=function(e){\\"undefined\\"!==typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:\\"Module\\"}),Object.defineProperty(e,\\"__esModule\\",{value:true})},n.t=function(e,t){if(1&t&&(e=n(e)),8&t)return e;if(4&t&&\\"object\\"===typeof e&&e&&e.__esModule)return e;var r=Object.create(null);if(n.r(r),Object.defineProperty(r,\\"default\\",{enumerable:true,value:e}),2&t&&\\"string\\"!=typeof e)for(var o in e)n.d(r,o,function(t){return e[t]}.bind(null,o));return r},n.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return n.d(t,\\"a\\",t),t},n.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},n.p=\\"\\",n(n.s=0)}([function(e,t,n){e.exports=n(1)},function(e,t,n){\\"use strict\\";n.r(t),n.d(t,\\"default\\",(function(){return o}));class r extends React.Component{constructor(...e){super(...e),this.handleClick=()=>{this.setState({hey:true})}}render(){return React.createElement(\\"div\\",{onClick:this.handleClick},\\"Hey \\",this.state.hey)}}class o{constructor(){console.log(\\"init class\\")}method(){console.log(r)}}}])}));
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Fails gracefully on broken markup 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/fails/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name  module          status
  1 kB  417   ./js/script.js  built failed ✖

  (2 assets hidden)

  Failed to compile.

__PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/fails/js/script.js
  15:1  error  Parsing error: Unexpected token

  13 |
  14 | }
> 15 |
     | ^

✖ 1 problem (1 error, 0 warnings)

SyntaxError: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/fails/js/script.js: Unexpected token (15:0)
  13 |
  14 | }
> 15 |
     | ^

  Δt ____ms ✖ 2 problems (2 errors, 0 warnings)

[__:__:__] 'js_myBundle' errored after ____ ms
[__:__:__] Webpack compilation failed
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
",
}
`;

exports[`Lints JavaScript with webpack 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/lints/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name  module                       status
  1 kB  0     multi ./js/script.js         built
  1 kB  1     ./js/script.js + 11 modules  built ✖

  (2 assets, 3 modules hidden)

  Failed to compile.

__PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/lints/js/Component.js
   4:1   error  Delete \`⏎\`                                 @swissquote/swissquote/prettier/prettier
   6:20  error  Replace \`hey:·true⏎···\` with \`·hey:·true\`  @swissquote/swissquote/prettier/prettier
  10:11  error  Delete \`⏎·\`                                @swissquote/swissquote/prettier/prettier
  12:11  error  Delete \`·\`                                 @swissquote/swissquote/prettier/prettier

✖ 4 problems (4 errors, 0 warnings)
  4 errors and 0 warnings potentially fixable with the \`--fix\` option.

__PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/lints/js/script.js
   3:23  error    Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
   5:10  error    'test' is defined but never used                 no-unused-vars
   5:14  error    Replace \`·(one,\` with \`(one,·\`                   @swissquote/swissquote/prettier/prettier
   6:1   error    Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
  11:5   warning  Unexpected console statement                     no-console
  14:9   error    Delete \`·\`                                       @swissquote/swissquote/prettier/prettier
  15:5   warning  Unexpected console statement                     no-console
  15:17  error    Replace \`··\\"some·method\\"·\` with \`\\"some·method\\"\`  @swissquote/swissquote/prettier/prettier
  18:11  error    Replace \`·a,·b)⏎·\` with \`a,·b)\`                  @swissquote/swissquote/prettier/prettier
  20:14  error    Expected '===' and instead saw '=='              eqeqeq

✖ 10 problems (8 errors, 2 warnings)
  6 errors and 0 warnings potentially fixable with the \`--fix\` option.

  Δt ____ms ✖ 2 problems (2 errors, 0 warnings)

[__:__:__] 'js_myBundle' errored after ____ ms
[__:__:__] Webpack compilation failed
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
",
}
`;

exports[`Removes unused classes 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-babel-webpack/tree-shaking/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name     module                     status
  1 kB  331      ./js/index.js + 3 modules  built

  size  name     asset                      status
  1 kB  default  myBundle.min.js            emitted
  1 kB  map      myBundle.min.js.map        emitted

  (1 module hidden)

  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;
